# NB_Music

./: .gitignore  AudioPlayer.js  LyricsPlayer.js  MusiclistManager.js  README.md  SettingManager.js  main.html  package.json  vite.config.js
src/: desktop-lyrics.html  index.html  login.html  main.html  main.js  mobile.js  script.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/javascript/: AudioPlayer.js  CacheManager.js  EffectManager.js  FavoriteManager.js  LocalImportManager.js  LoginManager.js  LyricsPlayer.js  MusicSearcher.js  MusiclistManager.js  PlaylistManager.js  SettingManager.js  SidebarResizer.js  UIManager.js  UpdateManager.js  VideoPlayerManager.js  VolumeControlManager.js
src/styles/: animations.css  base.css  index.css  mobile.css  utilities.css  variables.css
src/styles/components/: animations.css  controls.css  dialogs.css  dropdown.css  effectmanager.css  localimport.css  lyrics.css  musiclist.css  notifications.css  player-interactions.css  settings.css  sidebar.css  song.css  titlebar.css  volumecontrol.css
